Modify galley pics

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-    <title>My Gallery 4U | Home</title>
+    <title>YCY's Galley| Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -59,7 +59,7 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <a class="nav-brand" href="index.html" data-aos="fade-right" data-aos-duration="3000">
-                            <h1 class="home-logo">My Gallery 4U</h1>
+                            <h1 class="home-logo">YCY's Gallery</h1>
                         </a>
 
                         <div class="classy-navbar-toggler">
@@ -119,7 +119,7 @@
     <section class="welcome-area" data-aos="fade-right-up" data-aos-duration="3000">
         <div class="welcome-slides owl-carousel">
 
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/1.jpg);">
+            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/blue_secret.nature.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
 
@@ -173,82 +173,43 @@
                     <div class="alime-projects-menu">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">All</button>
-                            <button class="btn" data-filter=".human">Human</button>
                             <button class="btn" data-filter=".nature">Nature</button>
-                            <button class="btn" data-filter=".country">Country</button>
-                            <button class="btn" data-filter=".video">Video</button>
+                            <button class="btn" data-filter=".city">City</button>
+                            <button class="btn" data-filter=".night">Night</button>
+                            <button class="btn" data-filter=".human">Human</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row alime-portfolio">
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
-                    data-wow-delay="100ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/image11.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/image11.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp"
-                    data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/4.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/4.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
-                    data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/5.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
-                    data-wow-delay="700ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/6.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/6.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/7.jpg" alt="">
+                        <img src="img/bg-img/boat.nature.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/7.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/boat.nature.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item night mb-30 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/8.jpg" alt="">
+                        <img src="img/bg-img/Lighthouse_meets_the_Milky_way.astrophotography.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/8.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/Lighthouse_meets_the_Milky_way.astrophotography.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item city mb-30 wow fadeInUp"
                     data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/10.jpg" alt="">
+                        <img src="img/bg-img/Golden_Gate_sunset.city.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/10.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/Golden_Gate_sunset.city.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -256,42 +217,134 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
                     data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/9.jpg" alt="">
+                        <img src="img/bg-img/Wait_for_sea_of clouds.nature.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/9.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/Wait_for_sea_of clouds.nature.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-6 single_gallery_item video country mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-6 single_gallery_item nature mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/36.jpg" alt="">
+                        <img src="img/bg-img/blue_secret.nature.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/36.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/blue_secret.nature.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/37.jpg" alt="">
+                        <img src="img/bg-img/pigeon_point_lighthouse.nature.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/37.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/pigeon_point_lighthouse.nature.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item city mb-30 wow fadeInUp"
                     data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/image_new.jpg" alt="">
+                        <img src="img/bg-img/Manhattan_Epic_Skyline.city.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/image_new.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/Manhattan_Epic_Skyline.city.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/color_palette.nature.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/color_palette.nature.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature nature mb-30 wow fadeInUp"
+                    data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Valley.nature.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Valley.nature.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Farewell_Dune.nature.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Farewell_Dune.nature.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item city mb-30 wow fadeInUp"
+                    data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Golden_gate_low_fog.city.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Golden_gate_low_fog.city.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Volcano.nature.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Volcano.nature.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/shiprock.nature.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/shiprock.nature.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-6 single_gallery_item city mb-30 wow fadeInUp"
+                    data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Epic_Sunset_at Bay_Bridge.city.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Epic_Sunset_at Bay_Bridge.city.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item night nature mb-30 wow fadeInUp"
+                    data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Alaska_Northern_Light_Wing.night.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Alaska_Northern_Light_Wing.night.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Hawaii_blue_dream.nature.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Hawaii_blue_dream.nature.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="row">
                 <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
