Done. Expect the name

--- a/contact.html
+++ b/contact.html
@@ -253,6 +253,7 @@
     <div class="loader"></div>
   </div>
 
+
   <div class="top-search-area">
     <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
@@ -272,13 +273,14 @@
     </div>
   </div>
 
+
   <header class="header-area">
     <div class="main-header-area">
       <div class="classy-nav-container breakpoint-off">
         <div class="container">
           <nav class="classy-navbar justify-content-between" id="alimeNav">
             <a class="nav-brand" href="index.html">
-              <h1>My Gallery 4U</h1>
+              <h1>YCY's Gallery</h1>
             </a>
 
             <div class="classy-navbar-toggler">
@@ -300,9 +302,11 @@
                   <li><a href="blog.html">Blog</a></li>
                   <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
-
+                 <!--
                 <div class="search-icon" data-toggle="modal" data-target="#searchModal">
                   <i class="fa fa-search" aria-hidden="true"></i>
+                -->
+
                 </div>
               </div>
             </div>
@@ -313,7 +317,7 @@
   </header>
 
   <section class="breadcrumb-area bg-img bg-overlay jarallax" style="
-        background-image: url(img/bg-img/x38.jpg.pagespeed.ic.iei-le2mzD.jpg);
+        background-image: url(img/bg-img/background_contact.jpg);
       ">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
@@ -336,38 +340,6 @@
     </div>
   </section>
 
-  <!-- <div class="contact-area section-padding-80-50">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-lg-6">
-                    <h2 class="contact-title mb-30">Let’s Work <br>Together</h2>
-                </div>
-                <div class="col-12 col-md-6 col-lg-3">
-
-                    <div class="contact-info mb-30">
-                        <p>Email</p>
-                        <a
-                            href="https://preview.colorlib.com/cdn-cgi/l/email-protection#dbb2b5bdb4f5bfbebea9b8a9bebaafb2adbe9bbcb6bab2b7f5b8b4b6"><span
-                                class="__cf_email__"
-                                data-cfemail="21484f474e0f45444453425344405548574461464c40484d0f424e4c">[email&#160;protected]</span></a>
-                    </div>
-
-                    <div class="contact-info mb-30">
-                        <p>Call Us</p>
-                        <a href="#">+6511.188.888</a>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-3">
-
-                    <div class="contact-info mb-30">
-                        <p>Visit Us</p>
-                        <a href="#">60-49 Road 11378 New York</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
   <div class="Query" data-aos="fade-up" data-aos-duration="3000">
     <div class="left">
       <h2>
@@ -377,31 +349,6 @@
       <div class="icons-container">
         <!-- <div class="col-12 col-md-6 col-lg-3"> -->
         <!-- <div class="contact-info mb-30"> -->
-        <div class="contact-info">
-          <!-- <p>Email</p> -->
-
-          <div class="social-info">
-            <div class="icons">
-              <a href="https://www.linkedin.com/in/avinash-singh-071b79175/">
-                <img src="img/linkedin.png" target="_blank" max-width="2%" />
-                <p style="color: white; font-weight: bold;">Linkedin</p>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="contact-info mb-30"> -->
-        <div class="contact-info">
-          <!-- <p>Call Us</p> -->
-          <div class="social-info">
-            <div class="icons">
-              <a href="8543928256">
-                <img src="img/call.png" target="_blank" max-width="2%" />
-                <p style="color: white; font-weight: bold;">Call us</p>
-              </a>
-            </div>
-          </div>
-        </div>
 
         <!-- <div class="col-12 col-lg-3"> -->
 
@@ -411,7 +358,7 @@
 
           <div class="social-info">
             <div class="icons">
-              <a href="https://www.instagram.com/my_gallery_4u/">
+              <a href="https://www.instagram.com/sceneries_top/">
                 <img src="img/instag.png" target="_blank" max-width="2%" />
                 <p style="color: white; font-weight: bold;">Instagram</p>
               </a>
@@ -423,9 +370,9 @@
           <!-- <p>Call Us</p> -->
           <div class="social-info">
             <div class="icons">
-              <a href="https://www.facebook.com/profile.php?id=100007132384595">
-                <img src="img/faceb.png" target="_blank" max-width="2%" />
-                <p style="color: white; font-weight: bold;">Facebook</p>
+              <a href=#>
+                <img src="img/footer-icons/xhs_logo_red.png" target="_blank" max-width="2%" />
+                <p style="color: white; font-weight: bold;">Xiaohongshu</p>
               </a>
             </div>
           </div>
@@ -517,6 +464,7 @@
         </div>
     </div> -->
 
+  <!--
   <div class="follow-area clearfix">
     <div class="container">
       <div class="row">
@@ -629,44 +577,82 @@
       </div>
     </div>
   </div>
+  -->
+  <section id="social_media" class="follow-area clearfix" data-aos="fade-right" data-aos-duration="3000">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading text-center">
+                        <a href="https://www.instagram.com/my_gallery_4u/">
+                            <h2>Social Media</h2>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="instragram-feed-area owl-carousel">
+
+            <div class="single-instagram-item">
+                <img src="img/bg-img/youtube.jpg" alt="">
+                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
+                    <a href="#" style="font-size: 18px;">
+                        <i class="fa fa-youtube" aria-hidden="true"></i>
+                        <span>Not Started Yet</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="single-instagram-item">
+                <img src="img/bg-img/ins.jpg" alt="">
+                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
+                    <a href="https://www.instagram.com/sceneries_top/" style="font-size: 18px;">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <span>@sceneries_top</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="single-instagram-item">
+                <img src="img/bg-img/xhs.jpg" alt="">
+                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
+                    <a href="#" style="font-size: 18px;">
+                        <i class="fa fa-xiaohongshu" aria-hidden="true"></i>
+                        <span>Not Started Yet</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="single-instagram-item">
+                <img src="img/bg-img/bilibili.jpg" alt="">
+                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
+                    <a href="#" style="font-size: 18px;">
+                        <i class="fa fa-bilibili" aria-hidden="true"></i>
+                        <span>Not Started Yet</span>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
   <footer>
-    <div class="wrapper">
-      <div class="containerUp">
-        <div class="social-info">
-          <h2>Follow MY GALLERY 4U</h2>
-          <div class="icons">
-            <a href="https://www.linkedin.com/in/avinash-singh-071b79175/" target="_blank"><img
-                src="./img/footer-icons/pinpng.com-linkedin-png-533635.png" /></a>
-            <a href="https://www.instagram.com/my_gallery_4u" target="_blank"><img
-                src="./img/footer-icons/insta.jpg" /></a>
-            <a href="https://www.instagram.com/my_gallery_4u" target="_blank"><img
-                src="./img/footer-icons/pinterest-new.png" /></a>
-            <a href="https://www.quora.com/profile/Avinash-Singh-4809" target="_blank"><img
-                src="./img/footer-icons/quora.png" /></a>
-            <a href="https://github.com/avinash201199" target="_blank"><img src="./img/footer-icons/gtihub.png" /></a>
-          </div>
+        <div class="wrapper" data-aos="fade-up" data-aos-duration="3000">
+            <div class="containerUp">
+            </div>
+            <hr>
+            <div class="containerDown">
+                <div class="last">
+                    <div class="head" style="color: #636363;">Total Website Visit</div>
+                    <div class="count" style="color: #636363;">00</div>
+                </div>
+                <p>Copyright © 2022 All rights reserved | <a
+                        href="https://github.com/avinash201199/My-Gallery-4u" target="_blank">Webside Template</a> made with <span class="heart">❤</span> by <a
+                        href="https://www.instagram.com/my_gallery_4u" target="_blank">Avinash Singh</a></p>
+            </div>
         </div>
-        <div class="connect">
-          <h2>Stay up to date on the latest from My Gallery 4U</h2>
-          <form>
-            <input type="email" placeholder="Enter your email" />
-            <button>Subscribe</button>
-          </form>
         </div>
-      </div>
-      <hr />
-      <div class="containerDown">
-        <div class="last">
-          <p>
-            Copyright © 2022 All rights reserved | Made with
-            <span class="heart">❤</span> by
-            <a href="#" target="_blank">Avinash Singh</a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
   <script src="js/jquery.min.js"></script>
 
