--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
     <div id="preloader">
         <div class="loader"></div>
     </div>
-
-
     <div class="top-search-area">
         <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -80,9 +78,10 @@
                                     <li><a href="#awards">Awards</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
-
+                                <!--
                                 <div class="search-icon" data-toggle="modal" data-target="#searchModal"> <i
                                         class="fa fa-search" aria-hidden="true"></i></div>
+                                -->
                             </div>
 
                         </div>
@@ -92,21 +91,39 @@
         </div>
     </header>
     <ul id="social-sidebar" data-aos="fade-right" data-aos-duration="3000" style="z-index: 200">
+        <!--
         <li>
             <a class="icons" href="https://www.instagram.com/my_gallery_4u"
-                target="_blank"><img src="./img/footer-icons/insta.jpg"><span>Instagram</span></a>
+                target="_blank"><img src="./img/footer-icons/ins_logo_red.png"><span>Instagram</span></a>
         </li>
         <li>
             <a class="icons" href="./img/footer-icons/youtube.jpg" target="_blank">
-                <img src="./img/footer-icons/youtube.jpg"><span>YouTube</span></a>
+                <img src="./img/footer-icons/youtube_logo_red.avif"><span>YouTube</span></a>
         </li>
         <li>
             <a class="icons" href="https://github.com/avinash201199" target="_blank">
-                <img src="./img/footer-icons/facebook.png"><span>Bilibili</span></a>
+                <img src="./img/footer-icons/bilibili_logo_red.jpeg"><span>Bilibili</span></a>
         </li>
         <li>
             <a class="icons" href="https://www.quora.com/profile/Avinash-Singh-4809"
-                target="_blank"><img src="./img/footer-icons/mail.png"><span>小红书</span></a>
+                target="_blank"><img src="./img/footer-icons/xhs_logo_red.png"><span>小红书</span></a>
+        </li>
+        -->
+        <li>
+            <a class="icons" href="https://www.instagram.com/my_gallery_4u"
+                target="_blank"><img src="./img/footer-icons/ins_logo_black.png"><span>Instagram</span></a>
+        </li>
+        <li>
+            <a class="icons" href="./img/footer-icons/youtube.jpg" target="_blank">
+                <img src="./img/footer-icons/youtube_logo_black.png"><span>YouTube</span></a>
+        </li>
+        <li>
+            <a class="icons" href="https://github.com/avinash201199" target="_blank">
+                <img src="./img/footer-icons/bilibili_logo_black.png"><span>Bilibili</span></a>
+        </li>
+        <li>
+            <a class="icons" href="https://www.quora.com/profile/Avinash-Singh-4809"
+                target="_blank"><img src="./img/footer-icons/xhs_logo_black.jpeg"><span>小红书</span></a>
         </li>
     </ul>
 
@@ -121,10 +138,11 @@
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hello, I'm Chenchang Yi</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">I am a travel photographer living in the bay area. 
-                                I takes landscape photos and videos</p>
+                                <p data-animation="bounceInUp" data-delay="500ms"> I am a travel photographer living in San Francisco Bay Area.
+                                I have a profound passion for capturing the essence of the world through the lens of my camera. </p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Learn more</a>
+                                    <a href="#gallery" class="btn alime-btn mb-3 mb-sm-0 mr-4">Galley</a>
+                                    <a href="#awards" class="btn alime-btn mb-3 mb-sm-0 mr-4">Awards</a>
                                 </div>
                             </div>
                         </div>
@@ -133,21 +151,20 @@
             </div>
 
             <div class="single-welcome-slide bg-img bg-overlay" data-aos="fade-left" data-aos-duration="3000"
-                style="background-image: url(img/bg-img/2.jpg);">
+                style="background-image: url(img/bg-img/blue_secret.nature.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
 
                         <div class="col-12 col-lg-8 col-xl-6">
                             <div class="welcome-text">
-                                <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm Kartika</h2>
-                                <p data-animation="bounceInUp" data-delay="500ms">I photograph very instinctively. It`s
-                                    about
-                                    finding something intresting in an ordinary place... I've found it has little to do
-                                    with
-                                    the things you see and everything to do with the way you see them.
+                                <p data-animation="bounceInUp" data-delay="500ms">Landscapes are my sweet spot, but I also love diving into cityscapes, the serenity of nature, and even the cosmos through astrophotography. I'm also exploring taking videos with my camera and drone.
                                 </p>
+                                <p data-animation="bounceInUp" data-delay="500ms">I've been horoned to win some international photography awards along the way. Whether it's a sweeping vista, a bustling city, or the quietude of nature, I'm here to share the magic of the world through my lens.
+                                </p>
+
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Get a Quote</a>
+                                    <a href="#gallery" class="btn alime-btn mb-3 mb-sm-0 mr-4">Galley</a>
+                                    <a href="#awards" class="btn alime-btn mb-3 mb-sm-0 mr-4">Awards</a>
                                 </div>
                             </div>
                         </div>
@@ -405,11 +422,11 @@
         <div class="instragram-feed-area owl-carousel">
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/x11.jpg.pagespeed.ic.EUL6KdRKnX.jpg" alt="">
+                <img src="img/bg-img/youtube.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="#" style="font-size: 18px;">
                         <i class="fa fa-youtube" aria-hidden="true"></i>
-                        <span>@my_gallery_4u</span>
+                        <span>Not Started Yet</span>
                     </a>
                 </div>
             </div>
@@ -425,22 +442,21 @@
             </div>
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/13.jpg" alt="">
+                <img src="img/bg-img/xhs.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="#" style="font-size: 18px;">
                         <i class="fa fa-xiaohongshu" aria-hidden="true"></i>
-                        <span>my_gallery_4u
-                        </span>
+                        <span>Not Started Yet</span>
                     </a>
                 </div>
             </div>
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/14.jpg" alt="">
+                <img src="img/bg-img/bilibili.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="#" style="font-size: 18px;">
                         <i class="fa fa-bilibili" aria-hidden="true"></i>
-                        <span>my_gallery_4u</span>
+                        <span>Not Started Yet</span>
                     </a>
                 </div>
             </div>
@@ -488,7 +504,8 @@
                     <div class="head" style="color: #636363;">Total Website Visit</div>
                     <div class="count" style="color: #636363;">00</div>
                 </div>
-                <p>Copyright © 2022 All rights reserved | Made with <span class="heart">❤</span> by <a
+                <p>Copyright © 2022 All rights reserved | <a
+                        href="https://github.com/avinash201199/My-Gallery-4u" target="_blank">Webside Template</a> made with <span class="heart">❤</span> by <a
                         href="https://www.instagram.com/my_gallery_4u" target="_blank">Avinash Singh</a></p>
             </div>
         </div>
