--- a/contact.html
+++ b/contact.html
@@ -296,10 +296,10 @@
 
               <div class="classynav">
                 <ul id="nav">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="gallery.html">Gallery</a></li>
-                  <li><a href="blog.html">Blog</a></li>
+                  <li><a href="index.html#top">Home</a></li>
+                  <li><a href="index.html#top">About</a></li>
+                  <li><a href="index.html#gallery">Gallery</a></li>
+                  <li><a href="index.html#awards">Awards</a></li>
                   <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
                  <!--
