Add new picture and change background in Aug 2024.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section class="welcome-area" data-aos="fade-right-up" data-aos-duration="3000">
         <div class="welcome-slides owl-carousel">
 
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/Selfie1.jpg);">
+            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/monument_valley_sunrise.nature.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
 
@@ -193,7 +193,46 @@
                 </div>
             </div>
             <div class="row alime-portfolio">
+                
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Antelope_Canyon.nature.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Antelope_Canyon.nature.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item night mb-30 wow fadeInUp"
+                    data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/monument_valley_sunrise.nature.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/monument_valley_sunrise.nature.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item city mb-30 wow fadeInUp"
+                    data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Tkoyo_tower.city.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Tkoyo_tower.city.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Tokyo_qiancaosi.city.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Tokyo_qiancaosi.city.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
@@ -278,9 +317,9 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature nature mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/Valley.nature.jpg" alt="">
+                        <img src="img/bg-img/Mount_Fuji.city.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/Valley.nature.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/Mount_Fuji.city.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
