Add pics and bilibili website link

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <img src="./img/footer-icons/youtube_logo_black.png"><span>YouTube</span></a>
         </li>
         <li>
-            <a class="icons" href="#" target="_blank">
+            <a class="icons" href="https://space.bilibili.com/3546570320513998" target="_blank">
                 <img src="./img/footer-icons/bilibili_logo_black.png"><span>Bilibili</span></a>
         </li>
         <li>
@@ -450,7 +450,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <a href="https://www.instagram.com/my_gallery_4u/">
+                        <a href="#">
                             <h2>Social Media</h2>
                         </a>
                     </div>
@@ -493,9 +493,9 @@
             <div class="single-instagram-item">
                 <img src="img/bg-img/bilibili.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#" style="font-size: 18px;">
+                    <a href="https://space.bilibili.com/3546570320513998" style="font-size: 18px;">
                         <i class="fa fa-bilibili" aria-hidden="true"></i>
-                        <span>Not Started Yet</span>
+                        <span>@Yi旅行摄影</span>
                     </a>
                 </div>
             </div>
